examples/errors/Return400Example.raml
#%RAML 1.0 NamedExample
value: {
    "error": {
        "code": 400,
        "reason": "Bad Request",
        "apiName": "commerce-cloud-sys-api",
        "correlationId": "2fdba910-8841-11ed-ab64-00d76d1c7fcd",
        "dateTime": "2022-12-30T09:55:08.101-03:00",
        "message": {
            "description": "Required query parameter search not specified"
        }
    }
}